@@ -105,7 +105,7 @@ public abstract class Entity {
        entity.setHp(getHp() - (this.getDamage() - entity.getArmor()));
     }
     public void skill1(Entity entity){
-        skills.getFirst().doSkill(entity);
+        skills.get(0).doSkill(entity);
     }
     public void skill2(Entity entity){
         skills.get(1).doSkill(entity);
@@ -114,7 +114,7 @@ public abstract class Entity {
         skills.get(2).doSkill(entity);
     }
     public void skill4(Entity entity){
-        skills.getLast().doSkill(entity);
+        skills.get(3).doSkill(entity);
     }
     @Override
     public String toString() {
